fix overflow issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -192,7 +192,7 @@ body {
   background-color: #ccc;
   /* overflow-x: hidden;
   overflow-y: hidden; */
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .container {
